Changed image file

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@ div {background-color:tomato}
  <div><h3> Spain:the country of passion </h3>
  <h4> <center> 3 foods you CANT miss when you visit</center></h4> 
  <p style="font-family:courier;"> As many people know, the cuisine in Spain is unparallel. The Spanish cuisine varies throughout the different regions as the geography and climate have a large impact on the available ingredients and different cooking methods. I am going to show you what I personally think are the top 5 best platters to get while in Spain.</p>
- <img src="Spain.png">
+ <img src="spain.png">
  <h4 style="font-size:160%;"> #1: Paella </h4>
 <p style="font-family:verdana;"><div style="font-size:12pt"> The iconic Paella feast filled with rice and seafood platter might just be the number one thing to get in spain. This platter is very unique because of its diversity of culture. Although the exact location is still unknown, many beleive that the platter originates in the city of Valencia. The dish may just be a perfect collaboration between 2 cultures from Spain , the Romans, for the pan and the Arab, that brought rice.</p>
-<img src="Capture.png" width="250" height="250"> 
+<img src="Capture.PNG" width="250" height="250"> 
 
 <h4 style="font-size:160%;"> #2: Galician Blond Beef </h4>
 <p style="font-family:verdana;"><div style="font-size:12pt"> The autonomous region of the northwest of Spain, known as Galicia, is known for the delicious meats;Some may argue the best steak in the world. The steak is cooked to perfection, to the point where it melts in your mouth. Personally, my experience at the steakhouse in cantabria was the greatest meal I have had to this day.</p>
